--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello World!</h1>
     <h1>Hello World!</h1>
     <h1>gelodwd</h1>
+    <h1>hello</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
